# data-complexity-profiler

./: CHANGELOG.md  CITING.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
dcp/: __init__.py  __version__.py  main.py  utils.py
docs/: help.md
examples/: Sklearn datasets.ipynb
tests/: test_balance.py  test_correlation.py  test_features.py  test_linearity.py  test_neighborhood.py  test_smoothness.py
