[project]
name = "data-complexity-profiler"
description = "Data Complexity Profiler"
authors = [
    {name = "Iraitz Montalban", email = "iraitzm@gmail.com"}
]
dependencies = [
    "numpy>=1.25.2",
    "gower>=0.1.2",
    "networkx>=3.2.1",
]
requires-python = ">=3.12, <3.13"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
#Homepage = "..."
#Documentation = "..."
Repository = "https://github.com/IraitzM/data-complexity-profiler"
Issues = "https://github.com/IraitzM/data-complexity-profiler/issues"
Changelog = "https://github.com/IraitzM/data-complexity-profiler/blob/main/CHANGELOG.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
tests = [
    "nose2[coverage_plugin]>=0.15.1",
    "tox-pdm>=0.7.2",
    "coverage>=7.6.10",
    "pytest>=8.3.4",
]
examples = [
    "pandas>=2.1.1",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.1",
    "ipykernel>=6.25.2",
    "seaborn>=0.13.0",
    "ydata-profiling>=4.10.0",
    "setuptools>=75.1.0",
    "ucimlrepo>=0.0.7",
    "plotly-express>=0.4.1",
    "nbformat>=5.10.4",
]
release = [
    "pre-commit>=4.1.0",
    "python-semantic-release>=9.16.1",
]

# Ruff
[tool.ruff]
exclude = [".venv","data", "examples", "uv.lock", 'pdm.lock']
line-length = 79

# - https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "F",   # fake8
  "E",   # PyCodeStyle
  "I",   # isort
  "N",   # Naming
  "RUF", # Ruff
  "PL",  # PyLint
]
ignore = ["D102", "N802", "PLR0904"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# SemVer
[tool.semantic_release]
assets = []
build_command_env = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
version_variables = ["dcp/__version__.py:__version__"]
allow_zero_version = true
no_git_verify = false
tag_format = "{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["enhance","build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.pdm.build]
includes = ["dcp/"]

[tool.pdm.version]
source = "file"
path = "dcp/__version__.py"
